[package]
name = "pg_query_wrapper"
version = "0.1.0"
authors = ["Steven Kalt <kalt.steven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.58.1"
protobuf-codegen-pure = "2.23.0"
cc = "1.0"
