[package]
name = "pg_query_wrapper"
version = "0.1.0"
authors = ["Steven Kalt <kalt.steven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
prost-types = "0.7"

[build-dependencies]
bindgen = "0.58.1"
prost-build = "0.7"
cc = "1.0"

[workspace]
members = [
  "prost_build_cli",
]
